fix header, stat, scrollbar, icon delete; add grid

--- a/src/components/UserCardsPanel/style.scss
+++ b/src/components/UserCardsPanel/style.scss
@@ -1,9 +1,26 @@
 .usercards-panel {
-  display: flex;
+  // flex
+  /*display: flex;
   flex-wrap: wrap;
   justify-content: space-between; 
   align-items: flex-start; 
   margin: 10px;
-  gap: 20px; 
-}
+  gap: 20px; */
 
+
+  // grid
+  margin: 10px;
+  height: 100%;
+  width: 100%;
+  display: grid;
+  gap: 20px;
+ // grid-auto-flow: dense;
+  grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+ 
+
+  // scroll
+ // height: 100vh; /* Высота div */
+  overflow-y: auto; /* Вертикальная полоса прокрутки */
+  scrollbar-color: gray transparent; /* Серый ползунок и прозрачный фон */
+  //
+}
