--- a/src/pages/Main/style.scss
+++ b/src/pages/Main/style.scss
@@ -4,11 +4,16 @@
   background-color: #12141B;
   padding: 20px;
   gap: 20px;
+  overflow: hidden;
+  height: 100vh;
+
+  box-sizing: border-box;
 }
 
 .main-users{
   display: flex;
   flex-direction: row;
   gap: 20px;
+  height: 100%;
 }
   
